--- a/meme/templates/meme/home.html
+++ b/meme/templates/meme/home.html
@@ -11,13 +11,17 @@
         body, html {
             height: 100%;
             margin: 0;
+            scroll-snap-type: y mandatory;
+            overflow-y: scroll;
+            background-color: #f8f9fa; /* 배경 색상 추가 */
         }
         .container {
-            height: 100%;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            scroll-snap-align: start;
         }
         .navbar {
             width: 100%;
@@ -27,19 +31,36 @@
             align-items: center;
             justify-content: space-between;
             padding: 0 20px;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
         }
         .navbar-brand {
-            font-size: 7em; /* 네비게이션바 브랜드 글씨 크기 키움 */
-            margin-right: auto; /* 왼쪽 정렬 */
+            font-size: 7em;
+            margin-right: 20px; /* 좌측 브랜드와 우측 링크들 간의 간격 조정 */
         }
         .nav-link {
-            font-size: 2em; /* 네비게이션바 링크 글씨 크기 키움 */
+            font-size: 2em;
             margin-right: 15px;
         }
+        .navbar-nav {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            list-style: none; /* 점 제거 */
+            padding-left: 0; /* 기본 padding 제거 */
+        }
+        .navbar-nav-right {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-left: auto;
+            list-style: none; /* 점 제거 */
+            padding-left: 0; /* 기본 padding 제거 */
+        }
         .logo {
-            font-size: 18em; /* 기존 크기의 5배 */
-            margin-bottom: 10px; /* margin-bottom 값을 줄여서 로고를 위로 올림 */
-            height: 1000px;
+            font-size: 18em;
+            margin-bottom: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -49,17 +70,17 @@
             opacity: 0;
         }
         .logo .m1 {
-            animation: slideInLeft 1s forwards;
+            animation: slideInLeft 1.5s forwards;
         }
         .logo .four {
-            animation: slideInTop 1s forwards;
+            animation: slideInTop 1.5s forwards;
         }
         .logo .m2 {
-            animation: slideInBottom 1s forwards;
+            animation: slideInBottom 1.5s forwards;
         }
         @keyframes slideInLeft {
             0% {
-                transform: translateX(-100%);
+                transform: translateX(-300%);
                 opacity: 0;
             }
             100% {
@@ -69,7 +90,7 @@
         }
         @keyframes slideInTop {
             0% {
-                transform: translateY(-100%);
+                transform: translateY(-300%);
                 opacity: 0;
             }
             100% {
@@ -79,7 +100,7 @@
         }
         @keyframes slideInBottom {
             0% {
-                transform: translateY(100%);
+                transform: translateY(300%);
                 opacity: 0;
             }
             100% {
@@ -87,35 +108,26 @@
                 opacity: 1;
             }
         }
-        .navbar-nav {
-            margin-left: auto; /* 오른쪽 정렬 */
-            margin-right: auto; /* 왼쪽 정렬 */
-        }
-        .navbar-nav-right {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin-left: auto; /* 오른쪽 정렬 */
-            list-style: none;
-        }
-        .btn-transparent {
-            background-color: transparent; /* 배경 투명 */
-            border: none; /* 테두리 제거 */
+        .intro {
+            font-size: 1.5em;
+            text-align: center;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="{% url 'home' %}">M4M</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav">
-                <a class="nav-link btn btn-transparent text-success" href="{% url 'upload' %}" id="upload-button" role="button">업로드</a>
-                <a class="nav-link btn btn-transparent text-info" href="{% url 'board' %}" id="board-button" role="button">게시판</a>
-            </div>
-            <ul class="navbar-nav-right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link btn btn-transparent text-success" href="{% url 'upload' %}" id="upload-button" role="button">업로드</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-transparent text-info" href="{% url 'board' %}" id="board-button" role="button">게시판</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav navbar-nav-right">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link btn btn-transparent text-primary" href="{% url 'logout' %}" role="button">로그아웃</a>
@@ -138,6 +150,21 @@
             <span class="four">4</span>
             <span class="m2">M</span>
         </div>
+    </div>
+    <div class="container intro">
+        <p>이 곳에 소개글을 작성</p>
+    </div>
+    <div class="container intro">
+        <p>이 곳에 소개글을 작성</p>
+    </div>
+    <div class="container intro">
+        <p>이 곳에 소개글을 작성</p>
+    </div>
+    <div class="container intro">
+        <p>이 곳에 소개글을 작성</p>
+    </div>
+    <div class="container intro">
+        <p>이 곳에 소개글을 작성</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
