--- a/meme/templates/registration/login.html
+++ b/meme/templates/registration/login.html
@@ -87,6 +87,10 @@
                 opacity: 1;
             }
         }
+        .login-title {
+            font-size: 5em;
+            margin-bottom: 1.5em;
+        }
         .form-label, .form-control, .form-text {
             font-size: 1.5em; /* 폰트 크기를 조절 */
         }
@@ -97,7 +101,7 @@
             width: 100%;
             max-width: 500px;
             margin-bottom: 3em;
-            margin-left: 10em;
+            margin-left: 15em;
         }
         .form-row {
             display: flex;
@@ -142,7 +146,7 @@
         <span class="m2">M</span>
     </div>
     <div class="container">
-        <h1 class="mt-3 signup-title">로그인</h1> <!-- 로그인 제목의 폰트 크기 조절 -->
+        <h1 class="mt-3 login-title">로그인</h1> <!-- 로그인 제목의 폰트 크기 조절 -->
         
         <!-- 메시지 표시 영역 추가 -->
         {% if messages %}
